使用 Colaboratory 建立

--- a/base1.ipynb
+++ b/base1.ipynb
@@ -6,7 +6,7 @@
       "name": "base1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOEBrEDOFWoWAbYV/2l8Sp9",
+      "authorship_tag": "ABX9TyM64Jm+TUR7xt0UmAA5Jh9s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -570,6 +570,38 @@
           "text": [
             "00099\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "gXxQ5Z07R5IM",
+        "outputId": "20d568f1-a617-4f6b-91c7-4234b827d70d"
+      },
+      "source": [
+        "str1 = \"4 星期一 星期二 星期三 星期四 星期五 星期六\" \n",
+        "str1 = str1.split()\n",
+        "str1[int(str1[0])]"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'星期四'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
         }
       ]
     }
