使用 Colaboratory 建立

--- a/base2.ipynb
+++ b/base2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "base2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNowK8v98N1QhCWdJAOfAle",
+      "authorship_tag": "ABX9TyOWdizf3Gsi4KCum5J/Sfzk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -406,6 +406,145 @@
           "name": "stdout",
           "text": [
             "2 3 4 5 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5qO4s7UvKf6h",
+        "outputId": "3f416a15-faff-4ad1-a872-8fc1bd577f95"
+      },
+      "source": [
+        "print('-'*50)\n",
+        "print(list(range(3,40,2)))"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--------------------------------------------------\n",
+            "[3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-WVg0IXsLjJx",
+        "outputId": "b4bf4a5c-151c-464f-be0a-846bcff27066"
+      },
+      "source": [
+        "for _ in range(0,10):\n",
+        "  print(\"hello\")"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n",
+            "hello\n",
+            "hello\n",
+            "hello\n",
+            "hello\n",
+            "hello\n",
+            "hello\n",
+            "hello\n",
+            "hello\n",
+            "hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fLKs5z45LvVd",
+        "outputId": "5d8b5c88-04b2-45d3-d26a-094754128622"
+      },
+      "source": [
+        "a = 1\n",
+        "b = 10\n",
+        "\n",
+        "a, b = b, a\n",
+        "\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "faUf8GZyOzcX",
+        "outputId": "4d63ae72-30af-40fc-8603-9800f72a6e4b"
+      },
+      "source": [
+        "fruits = ['apple','banana','cheery']\n",
+        "for i ,fruits in enumerate(fruits):\n",
+        "  print(i,fruits) "
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 apple\n",
+            "1 banana\n",
+            "2 cheery\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gnw9bsoEQVJc",
+        "outputId": "f29c66a0-60b4-4f26-8567-452020c44882"
+      },
+      "source": [
+        "a = ['1','2','3']\n",
+        "print([str(int(i)+1) for i in a])"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['2', '3', '4']\n"
           ]
         }
       ]
