使用 Colaboratory 建立

--- a/base3.ipynb
+++ b/base3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "base3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMz8HP5HmMOqjr3xlWSqU6D",
+      "authorship_tag": "ABX9TyOmoOfx1xaVyKD3lGL8k22k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -239,6 +239,79 @@
         "id": "cw8rz4iNYjzo"
       },
       "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_drink(product_name):\n",
+        "  print(\"您的\",product_name)\n",
+        "  return product_name\n",
+        "\n",
+        "my_drink = make_drink(\"珍珠奶茶\")\n",
+        "print(my_drink)\n",
+        "\n",
+        "a = make_drink\n",
+        "\n",
+        "b = a(\"珍綠\")\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-ivNmbemf3DR",
+        "outputId": "2872ce23-1aaa-45f0-e3b1-0e0770d550c1"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "您的 珍珠奶茶\n",
+            "珍珠奶茶\n",
+            "您的 珍綠\n",
+            "珍綠\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [\"1\", \"2\", \"3\"]\n",
+        "\n",
+        "b = map(int, a)\n",
+        "print(list(b))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1_sLACANnHkL",
+        "outputId": "94e9077b-d1d6-4aa2-d75f-206cc8300404"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "q26Ia6IQiEvl"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
