使用 Colaboratory 建立

--- a/base3.ipynb
+++ b/base3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "base3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOmoOfx1xaVyKD3lGL8k22k",
+      "authorship_tag": "ABX9TyPBqXPXxFzhe9Npdz3WqcY6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -306,12 +306,89 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class Chair():\n",
+        "  def __init__(self, c):\n",
+        "    self.color = c\n",
+        "  # def set_color(self, c):\n",
+        "  #   self.color = c\n",
+        "  def seat(self):\n",
+        "    print(self.color, \"的椅子很舒服\")\n",
+        "\n",
+        "a_chair = Chair(\"Green\")\n",
+        "a_chair.seat()\n",
+        "\n",
+        "b_chair = Chair(\"Yellow\")\n",
+        "b_chair.seat()"
       ],
       "metadata": {
-        "id": "q26Ia6IQiEvl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q26Ia6IQiEvl",
+        "outputId": "2c0d78c4-8737-443b-e859-f999cfe140ca"
       },
-      "execution_count": null,
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Green 的椅子很舒服\n",
+            "Yellow 的椅子很舒服\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Sofa(Chair): # Chair:父類別 Sofa:子類別\n",
+        "  def lay(self):\n",
+        "    print(\"我可以躺哦\")\n",
+        "\n",
+        "  def seat(self):\n",
+        "    super().seat()   #呼叫父類別\n",
+        "    print(\"我是沙發哦\")\n",
+        "\n",
+        "a_sofa = Sofa(\"Yellow\")\n",
+        "a_sofa.seat()\n",
+        "a_sofa.lay()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OGteptgQlC5h",
+        "outputId": "8cf4626d-e8e1-48f8-af21-59817e2faa37"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yellow 的椅子很舒服\n",
+            "我是沙發哦\n",
+            "我可以躺哦\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# f = open(\"file.txt\", \"r\")\n",
+        "# print(f.read())\n",
+        "# f.close()\n",
+        "\n",
+        "with open(\"file.txt\",\"w\", encoding=\"utf-8\") as f:\n",
+        "  # print(f.read())\n",
+        "  f.write(\"today is good day\")"
+      ],
+      "metadata": {
+        "id": "66nJmzD8o-OZ"
+      },
+      "execution_count": 9,
       "outputs": []
     }
   ]
