使用 Colaboratory 建立

--- a/base3.ipynb
+++ b/base3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "base3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBqXPXxFzhe9Npdz3WqcY6",
+      "authorship_tag": "ABX9TyNt8dub7tKiwUI4Bxq1W0pA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
         "id": "wu759Up392v0",
         "outputId": "713bc0b8-14c6-482b-b6cf-e2645961df79"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
         "id": "fCsBW0tz_Flz",
         "outputId": "4b1dd9aa-a15b-4eb2-ae27-54d15a9f9ee2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
         "id": "DQY89ed4BwiU",
         "outputId": "a5a79aca-2310-4817-82c4-e0126d3af52e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +155,7 @@
         "id": "zu-zW8e_Ds85",
         "outputId": "b6be46ff-2960-4f53-e0d8-a304baa96c40"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
         "id": "LlsfkVIDFPli",
         "outputId": "bbb056fb-8aa6-494c-f81c-3b3101ee75ff"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
         "id": "atjxep4UYu3Q",
         "outputId": "accd57f5-b9c1-42b5-8b70-3d55e347f484"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
       "metadata": {
         "id": "cw8rz4iNYjzo"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
         "id": "-ivNmbemf3DR",
         "outputId": "2872ce23-1aaa-45f0-e3b1-0e0770d550c1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
         "id": "1_sLACANnHkL",
         "outputId": "94e9077b-d1d6-4aa2-d75f-206cc8300404"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
         "id": "q26Ia6IQiEvl",
         "outputId": "2c0d78c4-8737-443b-e859-f999cfe140ca"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +361,7 @@
         "id": "OGteptgQlC5h",
         "outputId": "8cf4626d-e8e1-48f8-af21-59817e2faa37"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +377,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# f = open(\"file.txt\", \"r\")\n",
+        "# f = open(\"file.txt\", \"r\")  (模式: r 唯讀, w 寫入-覆寫, a 寫入-續寫)\n",
         "# print(f.read())\n",
         "# f.close()\n",
         "\n",
@@ -388,8 +388,43 @@
       "metadata": {
         "id": "66nJmzD8o-OZ"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# C create\n",
+        "# R read\n",
+        "# U update\n",
+        "# D delete\n",
+        "class Crud():\n",
+        "  def get_data(self):\n",
+        "    return 100\n",
+        "class MoneyCrud(Crud):\n",
+        "  def get_data(self):\n",
+        "    m = super().get_data()\n",
+        "    return m - 10\n",
+        "money = MoneyCrud()\n",
+        "print(money.get_data())"
+      ],
+      "metadata": {
+        "id": "u9zvbH5lWPyQ",
+        "outputId": "ea3b5ec8-480d-4baf-b471-bd067003eb8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "90\n"
+          ]
+        }
+      ]
     }
   ]
 }
